Add server connectivity to the Android target (#228)
- Implement external server connectivity on Android
- Add ENABLE_EXTERNAL_SERVER_MODE option
- Rename DesktopSettings to ServerSettings
- Move desktop startup command to system category
- Various refactors and organisation changes to PlayerService-related files
- Improve loading splash UI
- Add option to disable audio playback when using external server
- Remove spms submodule
- Don't send Discord webhook in PR CI run